; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/mlx4/extr_resource_tracker.c_qp_detach.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/mlx4/extr_resource_tracker.c_qp_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_dev = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.mlx4_qp = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx4_dev*, %struct.mlx4_qp*, i32*, i32, i32, i32)* @qp_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qp_detach(%struct.mlx4_dev* %0, %struct.mlx4_qp* %1, i32* %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.mlx4_dev*, align 8
  %9 = alloca %struct.mlx4_qp*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.mlx4_dev* %0, %struct.mlx4_dev** %8, align 8
  store %struct.mlx4_qp* %1, %struct.mlx4_qp** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %14 = load %struct.mlx4_dev*, %struct.mlx4_dev** %8, align 8
  %15 = getelementptr inbounds %struct.mlx4_dev, %struct.mlx4_dev* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  switch i32 %17, label %29 [
    i32 128, label %18
    i32 129, label %22
  ]

18:                                               ; preds = %6
  %19 = load %struct.mlx4_dev*, %struct.mlx4_dev** %8, align 8
  %20 = load i32, i32* %13, align 4
  %21 = call i32 @mlx4_flow_detach(%struct.mlx4_dev* %19, i32 %20)
  store i32 %21, i32* %7, align 4
  br label %32

22:                                               ; preds = %6
  %23 = load %struct.mlx4_dev*, %struct.mlx4_dev** %8, align 8
  %24 = load %struct.mlx4_qp*, %struct.mlx4_qp** %9, align 8
  %25 = load i32*, i32** %10, align 8
  %26 = load i32, i32* %11, align 4
  %27 = load i32, i32* %12, align 4
  %28 = call i32 @mlx4_qp_detach_common(%struct.mlx4_dev* %23, %struct.mlx4_qp* %24, i32* %25, i32 %26, i32 %27)
  store i32 %28, i32* %7, align 4
  br label %32

29:                                               ; preds = %6
  %30 = load i32, i32* @EINVAL, align 4
  %31 = sub nsw i32 0, %30
  store i32 %31, i32* %7, align 4
  br label %32

32:                                               ; preds = %29, %22, %18
  %33 = load i32, i32* %7, align 4
  ret i32 %33
}

declare dso_local i32 @mlx4_flow_detach(%struct.mlx4_dev*, i32) #1

declare dso_local i32 @mlx4_qp_detach_common(%struct.mlx4_dev*, %struct.mlx4_qp*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
